--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -197,9 +197,9 @@ sup a:hover {
     Uprawnienia
     <select id="gwiazdki">
       <option value="">Wszystkie uprawnienia</option>
-      <option value="1">⭐</option>
-      <option value="2">⭐⭐</option>
-      <option value="3">⭐⭐⭐</option>
+      <option value="⭐">⭐</option>
+      <option value="⭐⭐">⭐⭐</option>
+      <option value="⭐⭐⭐">⭐⭐⭐</option>
     </select>
   </label>
 
