--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <p>SZUKAM ELEKTRYKA</p>
     </a>
 
-    <a href="/profil" class="box">
+    <a href="/proelektryk" class="box">
       <img src="orzel_3.png" alt="Orzeł 3" />
       <p>PROFIL ELEKTRYKA</p>
     </a>
