--- a/index.html
+++ b/index.html
@@ -231,9 +231,7 @@
  src="certyfikowani.png" alt="certyfikacja">
   <h3>Certyfikowani fachowcy</h3>
 <p style="text-align: justify;">
-Ogólnopolski Rejestr Elektryków prezentuje profile elektryków posiadających
-udokumentowane kwalifikacje zawodowe, którzy samodzielnie publikują informacje
-o swoich uprawnieniach i doświadczeniu. Platforma umożliwia przejrzyste
+Platforma umożliwia przejrzyste
 zaprezentowanie zakresu kompetencji, specjalizacji oraz statusu profilu,
 dzięki czemu klienci mogą w wygodny sposób zapoznać się z ofertą fachowców
 działających w danym regionie.
