--- a/proelektryk/index.html
+++ b/proelektryk/index.html
@@ -20,23 +20,18 @@
 
     .box {
       background: #fff;
-      padding: 24px;
+      padding: 20px;
       border-radius: 8px;
       width: 100%;
       max-width: 420px;
       box-shadow: 0 2px 10px rgba(0,0,0,.1);
     }
 
-    h1 {
-      margin-top: 0;
-      font-size: 20px;
-    }
-
     input, button {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin-top: 12px;
-      font-size: 15px;
+      font-size: 16px;
     }
 
     button {
@@ -45,58 +40,93 @@
       border: none;
       border-radius: 4px;
       cursor: pointer;
+      touch-action: manipulation;
     }
 
-    .msg {
+    #log {
       margin-top: 15px;
-      font-size: 14px;
+      font-size: 13px;
+      background: #111;
+      color: #0f0;
+      padding: 10px;
+      height: 140px;
+      overflow-y: auto;
+      border-radius: 4px;
+      white-space: pre-wrap;
     }
   </style>
 </head>
 <body>
 
 <div class="box">
-  <h1>Test Confirm Your Signup</h1>
+  <h3>Test Confirm Your Signup</h3>
 
-  <input type="email" id="email" placeholder="Email" required />
-  <input type="password" id="password" placeholder="Hasło (min. 6 znaków)" required />
+  <input type="email" id="email" placeholder="Email" />
+  <input type="password" id="password" placeholder="Hasło (min. 6 znaków)" />
 
-  <button onclick="signup()">Wyślij email potwierdzający</button>
+  <button id="signupBtn">Wyślij email</button>
 
-  <div class="msg" id="msg"></div>
+  <div id="log"></div>
 </div>
 
 <script>
+  const logBox = document.getElementById("log");
+
+  function log(msg) {
+    console.log(msg);
+    logBox.textContent += msg + "\n";
+    logBox.scrollTop = logBox.scrollHeight;
+  }
+
+  log("🟢 JS załadowany");
+
   const supabase = window.supabase.createClient(
     "https://tfbqqduxtsacvwfigsvt.supabase.co",
     "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8"
   );
 
-  async function signup() {
+  log("🟢 Supabase client OK");
+
+  const btn = document.getElementById("signupBtn");
+
+  btn.addEventListener("click", signup);
+  btn.addEventListener("touchstart", signup);
+
+  function signup(e) {
+    e.preventDefault();
+
+    log("👉 Klik wykryty");
+
     const email = document.getElementById("email").value;
     const password = document.getElementById("password").value;
-    const msg = document.getElementById("msg");
 
-    msg.textContent = "Wysyłanie…";
+    log("📨 Email: " + email);
 
-    const { data, error } = await supabase.auth.signUp({
+    if (!email || !password) {
+      log("⚠️ Brak email lub hasła");
+      return;
+    }
+
+    log("⏳ Wysyłanie do Supabase...");
+
+    supabase.auth.signUp({
       email,
       password,
       options: {
         emailRedirectTo: "https://orep.pl/proelektryk/"
       }
+    }).then(({ data, error }) => {
+      if (error) {
+        log("❌ Błąd Supabase: " + error.message);
+      } else {
+        log("✅ Email potwierdzający wysłany");
+        log("📦 Odpowiedź: " + JSON.stringify(data));
+      }
+    }).catch(err => {
+      log("🔥 Exception: " + err.message);
     });
-
-    if (error) {
-      msg.textContent = "❌ Błąd: " + error.message;
-      msg.style.color = "red";
-    } else {
-      msg.textContent = "✅ Email potwierdzający został wysłany. Sprawdź skrzynkę.";
-      msg.style.color = "green";
-    }
   }
 </script>
 
 </body>
 </html>
-
