--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -2,123 +2,95 @@
 <html lang="pl">
 <head>
   <link rel="icon" href="/favicon.png">
-  <meta name="robots" content="noindex, nofollow">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
+<meta name="robots" content="noindex, nofollow">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f6f8;
-      display: flex;
-      justify-content: center;
-      padding: 10px;
-      margin: 0;
-    }
+<style>
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f4f6f8;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
 
-    .form-wrapper {
-      width: 100%;
-      max-width: 600px;
-      padding: 0 10px;
-      box-sizing: border-box;
-    }
+.form-wrapper {
+  width: 100%;
+  max-width: 600px;
+}
 
-    form {
-      position: relative;
-      background-color: #fff;
-      padding: 20px 25px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      box-sizing: border-box;
-    }
+form {
+  position: relative;
+  background-color: #fff;
+  padding: 30px 40px;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
 
-    h2 { text-align: center; margin-bottom: 20px; font-size: 22px; }
+h2 { text-align: center; margin-bottom: 20px; }
 
-    label {
-      margin-top: 15px;
-      display: block;
-      font-weight: 600;
-      font-size: 14px;
-    }
+label { margin-top: 15px; display: block; font-weight: 600; }
 
-    input, textarea, select {
-      width: 100%;
-      padding: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-      box-sizing: border-box;
-      background-color: #fff;
-      color: #000;
-    }
+input, textarea, select {
+  width: 100%;
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  box-sizing: border-box;
+  background-color: #fff;
+  color: #000;
+}
 
-    input[readonly] { background-color: #f4f6f8; cursor: not-allowed; }
-    input[type="tel"] { ime-mode: disabled; }
+select:disabled { background-color: #f4f6f8; color: #555; cursor: not-allowed; }
+select:not(:disabled) { background-color: #fff; color: #000; }
 
-    select:disabled { background-color: #f4f6f8; color: #555; cursor: not-allowed; }
-    select:not(:disabled) { background-color: #fff; color: #000; }
+textarea { min-height: 80px; }
 
-    select { height: 42px; }
+button[type="submit"] {
+  margin-top: 20px;
+  width: 100%;
+  padding: 12px;
+  background: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  cursor: pointer;
+}
+button[type="submit"]:hover { background: #45a049; }
 
-    textarea { min-height: 80px; }
+#close-btn {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  background: transparent;
+  border: none;
+  font-size: 26px;
+  font-weight: bold;
+  cursor: pointer;
+  color: #666;
+  line-height: 1;
+}
+#close-btn:hover { color: #000; }
 
-    button[type="submit"] {
-      margin-top: 20px;
-      width: 100%;
-      padding: 12px;
-      background: #4CAF50;
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    button[type="submit"]:hover { background: #45a049; }
+#result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
+.error { background: #f44336; color: #fff; }
+#loading { display: none; text-align: center; margin-top: 10px; font-weight: bold; }
 
-    #close-btn {
-      position: absolute;
-      top: 12px;
-      right: 12px;
-      background: transparent;
-      border: none;
-      font-size: 26px;
-      font-weight: bold;
-      cursor: pointer;
-      color: #666;
-      line-height: 1;
-    }
-    #close-btn:hover { color: #000; }
-
-    #result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
-    .error { background: #f44336; color: #fff; }
-    #loading { display: none; text-align: center; margin-top: 10px; font-weight: bold; }
-
-    .rodo-label {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      align-items: flex-start;
-      margin-top: 15px;
-      font-weight: normal;
-      font-size: 14px;
-      gap: 10px;
-    }
-    .rodo-label input[type="checkbox"] { margin-top: 2px; accent-color: orange; }
-
-    /* RESPONSYWNOŚĆ */
-    @media (max-width: 480px) {
-      form {
-        padding: 15px 15px;
-      }
-      h2 { font-size: 20px; }
-      input, textarea, select { font-size: 15px; }
-      .rodo-label { font-size: 13px; }
-      #close-btn { font-size: 24px; top: 8px; right: 8px; }
-    }
-  </style>
+.rodo-label {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+  font-weight: normal;
+  font-size: 14px;
+}
+.rodo-label input[type="checkbox"] { margin-right: 10px; accent-color: orange; }
+</style>
 </head>
 
 <body>
@@ -158,7 +130,7 @@
   <input id="email" readonly>
 
   <label>Telefon</label>
-  <input id="telefon" type="tel">
+  <input id="telefon">
 
   <label>Zajmuje się</label>
   <textarea id="zajmujeSie"></textarea>
@@ -181,7 +153,6 @@
 <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
-// Twój Supabase
 const supabase = createClient(
   'https://tfbqqduxtsacvwfigsvt.supabase.co',
   'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
@@ -368,35 +339,6 @@ console.log('USER:', user)
     // --- PRZEKIEROWANIE po sukcesie ---
     window.location.href = 'https://orep.pl/logowanie';
   }
-})
-// === BLOKADA EMAILA I TELEFONU W NIEODPOWIEDNICH POLACH ===
-
-const emailRegex = /[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-z]{2,}/i
-const phoneRegex = /\+?\d[\d\s\-]{4,}/
-
-const blockedFields = [
-  'imie',
-  'nazwisko',
-  'zajmujeSie'
-]
-
-blockedFields.forEach(id => {
-  const el = document.getElementById(id)
-  if (!el) return
-
-  el.addEventListener('input', () => {
-    const original = el.value
-    const cleaned = original
-      .replace(emailRegex, '')
-      .replace(phoneRegex, '')
-
-    if (original !== cleaned) {
-      el.value = cleaned
-      result.textContent =
-        'Adres e-mail i numer telefonu wpisujemy wyłącznie w przeznaczonych do tego polach.Kazda próba złamania regulaminu może powodować zablokowanie profilu elektryka'
-      result.className = 'error'
-    }
-  })
 })
 </script>
 </body>
