--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -204,7 +204,7 @@
               log.innerText = "❌ Hasło musi mieć minimum 8 znaków";
               
             } else if (error.message.includes("rate limit")) {
-              log.innerText = "❌ Wysłana zbyt wiele prób logowania. Spróbuj ponownie za kilka minut...";
+              log.innerText = "❌ Wysłano zbyt wiele prób logowania. Spróbuj ponownie za kilka minut...";
             } else {
               log.innerText = "❌ " + error.message;
             }
